--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <link rel="preload" as="image" href="./assets/images/hero-circle-two.png">
   <link rel="preload" as="image" href="./assets/images/heart-rate.svg">
   <link rel="preload" as="image" href="./assets/images/calories.svg">
+  
 
 </head>
 
@@ -42,7 +43,7 @@
   <!-- 
     - #HEADER
   -->
-
+  
   <header class="header" data-header>
     <div class="container">
 
@@ -77,7 +78,7 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link" data-nav-link>Contact Us</a>
+            <a href="#footer" class="navbar-link" data-nav-link>Contact Us</a>
           </li>
 
         </ul>
@@ -103,11 +104,11 @@
     <article>
 
       <!-- 
-        - #HERO
+        - #HOME
       -->
 
       <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section
-        style="background-image: url('./assets/images/hero-bg.png')">
+        style="background-image: url('./assets/images/six1.jpg')">
         <div class="container">
 
           <div class="hero-content">
@@ -132,7 +133,7 @@
 
             <img src="./assets/images/hero-circle-one.png" width="666" height="666" aria-hidden="true" alt=""
               class="circle circle-1">
-            <img src="./assets/images/hero-circle-two.png" width="666" height="666" aria-hidden="true" alt=""
+             <img src="./assets/images/hero-circle-two.png" width="666" height="666" aria-hidden="true" alt=""
               class="circle circle-2">
 
             <img src="./assets/images/heart-rate.svg" width="255" height="270" alt="heart rate"
@@ -201,7 +202,7 @@
 
               </div>
 
-              <a href="#" class="btn btn-primary">Explore More</a>
+              <a href="https://www.wikihow.com/Improve-Physical-Fitness" class="btn btn-primary">Explore More</a>
 
             </div>
 
@@ -226,11 +227,13 @@
 
             <h2 class="h2 card-title">Explore Fitness Life</h2>
 
-            <button class="play-btn" aria-label="play video">
-              <ion-icon name="play-sharp" aria-hidden="true"></ion-icon>
-            </button>
+            <a href="https://www.youtube.com/watch?v=6JEBiIHY4Ds&t=1962s">
+              <button class="play-btn" aria-label="play video">
+                <ion-icon name="play-sharp" aria-hidden="true"></ion-icon>
+              </button>
+            </a>
 
-            <a href="#" class="btn-link has-before">Watch More</a>
+            <a href="https://www.youtube.com/watch?v=6JEBiIHY4Ds&t=1962s" class="btn-link has-before">Watch More</a>
 
           </div>
 
@@ -249,7 +252,7 @@
         style="background-image: url('./assets/images/classes-bg.png')">
         <div class="container">
 
-          <p class="section-subtitle">Our Classes</p>
+          <a href="https://www.youtube.com/watch?v=qD-Wy01lfD0"><p class="section-subtitle">Our Classes</p></a>
 
           <h2 class="h2 section-title text-center">Fitness Classes For Every Goal</h2>
 
@@ -270,7 +273,7 @@
                       class="title-icon">
 
                     <h3 class="h3">
-                      <a href="#" class="card-title">Weight Lifting</a>
+                      <a href="https://www.youtube.com/watch?v=U0bhE67HuDY" class="card-title">Weight Lifting</a>
                     </h3>
                   </div>
 
@@ -312,7 +315,7 @@
                       class="title-icon">
 
                     <h3 class="h3">
-                      <a href="#" class="card-title">Cardio & Strenght</a>
+                      <a href="https://www.youtube.com/watch?v=bUd635j-KAA" class="card-title">Cardio & Strenght</a>
                     </h3>
                   </div>
 
@@ -354,7 +357,7 @@
                       class="title-icon">
 
                     <h3 class="h3">
-                      <a href="#" class="card-title">Power Yoga</a>
+                      <a href="https://www.youtube.com/watch?v=S9p5yhE6_fk" class="card-title">Power Yoga</a>
                     </h3>
                   </div>
 
@@ -458,15 +461,14 @@
                 <div class="card-content">
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Going to the gym for the first time</a>
+                    <a href="https://trustyspotter.com/blog/first-day-at-gym/" class="card-title">Going to the gym for the first time</a>
                   </h3>
 
                   <p class="card-text">
-                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
-                    habitasse platea dictumst.
+                    You want to feel great about going so you'll feel encouraged to come back. The more times you can complete this cycle, the more likely you are to build the habit for life.
                   </p>
 
-                  <a href="#" class="btn-link has-before">Read More</a>
+                  <a href="https://trustyspotter.com/blog/first-day-at-gym/" class="btn-link has-before">Read More</a>
 
                 </div>
 
@@ -486,15 +488,14 @@
                 <div class="card-content">
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Parturient accumsan cacus pulvinar magna</a>
+                    <a href="https://barbend.com/treadmill-workouts/" class="card-title">Treadmill workout instructions</a>
                   </h3>
 
                   <p class="card-text">
-                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
-                    habitasse platea dictumst.
+                    If you have access to a commercial-grade treadmill, you can gradually escalate your rate of motion from a barely perceptible crawl as your conditioning continues to improve.
                   </p>
 
-                  <a href="#" class="btn-link has-before">Read More</a>
+                  <a href="https://barbend.com/treadmill-workouts/" class="btn-link has-before">Read More</a>
 
                 </div>
 
@@ -514,15 +515,15 @@
                 <div class="card-content">
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Risus purus namien parturient accumsan cacus</a>
+                    <a href="https://www.nerdfitness.com/blog/the-20-minute-beginner-kettlebell-workout-build-muscle-and-burn-fat/" class="card-title">Our simple beginner kettlebell workout</a>
                   </h3>
 
                   <p class="card-text">
-                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
-                    habitasse platea dictumst.
+                    The most important thing is performing each rep with great technique so if you need a breather to recover and give it your best effort, take it!
+                    kettlebell workout
                   </p>
 
-                  <a href="#" class="btn-link has-before">Read More</a>
+                  <a href="https://www.nerdfitness.com/blog/the-20-minute-beginner-kettlebell-workout-build-muscle-and-burn-fat/" class="btn-link has-before">Read More</a>
 
                 </div>
 
@@ -545,7 +546,7 @@
     - #FOOTER
   -->
 
-  <footer class="footer">
+  <footer id="footer" class="footer">
 
     <div class="section footer-top bg-dark has-bg-image" style="background-image: url('./assets/images/footer-bg.png')">
       <div class="container">
@@ -597,19 +598,19 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link">About Us</a>
+            <a href="#about" class="footer-link">About Us</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Classes</a>
+            <a href="#class" class="footer-link">Classes</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Blog</a>
+            <a href="#blog" class="footer-link">Blog</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Contact Us</a>
+            <a href="#footer" class="footer-link">Contact Us</a>
           </li>
 
         </ul>
